--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Work App"
+      name="viewport"
+      content="width=device-width, initial-scale=0.9, maximum-scale=1.0, user-scalable=yes"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;800&display=swap" rel="stylesheet">
+
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Work App" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;800&display=swap"
+      rel="stylesheet"
+    />
     <title>BG Services Turkey</title>
   </head>
   <body>
